# moog-sub37-mcp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: PREGRESS.md
moog_sub37_mcp/: __init__.py  main.py
moog_sub37_mcp/digitone/config/: config.py
moog_sub37_mcp/digitone/models/: models.py
moog_sub37_mcp/digitone/services/: amp_fx_controller.py  base_synth_controller.py  filter_controller.py  fm_drum_controller.py  fm_tone_controller.py  lfo_controller.py  swarmer_controller.py  wavetone_controller.py
moog_sub37_mcp/digitone/utils/: parameter_utils.py
moog_sub37_mcp/mcp_server/: server.py
moog_sub37_mcp/midi/: digitone_midi.py  midi_manager.py
moog_sub37_mcp/sub37/config/: config.py
moog_sub37_mcp/sub37/data/: lfo.py
moog_sub37_mcp/sub37/services/: amp_fx_controller.py  base_synth_controller.py  filter_controller.py  fm_drum_controller.py  fm_tone_controller.py  lfo_controller.py  swarmer_controller.py  wavetone_controller.py
moog_sub37_mcp/sub37/utils/: parameter_utils.py
moog_sub37_mcp/tools/: __init__.py  amp_tool.py  apm_tool.py  arp_nrpn_tool.py  arp_tool.py  filter_nrpn_tool.py  filter_tool.py  fx_tool.py  glide_nrpn_tool.py  glide_tool.py  global_tool.py  lfo_nrpn_tool.py  lfo_tool.py  mod_nrpn_tool.py  mod_tool.py  osc_nrpn_tool.py  osc_tool.py  wavetone_tool.py
test/ut/: test_amp.py  test_elektron_config_validation.py  test_filters.py  test_fmdrum.py  test_fmtone.py  test_fx.py  test_lfo.py  test_swarmer.py  test_wavetone.py  test_wavetone_midi.py
tests/: conftest.py
tests/ut/: test_amp.py  test_elektron_config_validation.py  test_filters.py  test_fmdrum.py  test_fmtone.py  test_fx.py  test_lfo.py  test_swarmer.py  test_wavetone.py  test_wavetone_midi.py
