[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "moog-sub37-mcp"
dynamic = ["version"]
description = "MPC to control Moog Sub37 Monophonic Synthesizer"
authors = [{ name = "zerubeus", email = "zerubeus@gmail.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.10.6",
    "mido>=1.3.1",
    "python-rtmidi>=1.5.7",
    "mcp[cli]>=1.5.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "colorlog>=6.9.0",
    "inline-snapshot>=0.20.9",
    "pytest>=8.3.5",
    "mypy>=1.11.2",
    "pyright>=1.1.390",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 120
target-version = "py39"
include = ["moog_sub37_mcp/**/*.py", "tests/**/*.py", "docs/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "RUF018", # https://docs.astral.sh/ruff/rules/assignment-in-assert/
    "C90",
    "UP",
    "I",
    "D",
    "TID251",
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true, known-first-party = ["pydantic_ai"] }
mccabe = { max-complexity = 15 }
ignore = [
    "D100", # ignore missing docstring in module
    "D102", # ignore missing docstring in public method
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "D107", # ignore missing docstring in __init__ methods
]

[project.scripts]
moog-sub37-mcp = "moog_sub37_mcp.main:main"


[tool.hatch.build.targets.wheel]
packages = ["moog_sub37_mcp"]

[project.urls]
"Homepage" = "https://github.com/zerubeus/moog-sub37-mcp"
"Bug Tracker" = "https://github.com/zerubeus/moog-sub37-mcp/issues"
